Add test config and test package

--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -9,7 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build and publish to pypi
-        uses: JRubics/poetry-publish@v1.8
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Python Poetry Action
+        uses: abatilo/actions-poetry@v2.1.0
         with:
           pypi_token: ${{ secrets.pypi_api_token }}
+      - name: Publish Package
+        run: poetry publish
+
