--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -10,13 +10,13 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Python Poetry Action
+      - name: Install Poetry into Environment
         uses: abatilo/actions-poetry@v2.1.0
       - name: Install Package
         run: poetry install
       - name: Test Package
         run: poetry run pytest
-        with:
+        env:
           tap_clockify_api_key: ${{ secrets.tap_clockify_api_key }}
           tap_clockify_workspace: ${{ secrets.tap_clockify_workspace }}
 
