--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -2,9 +2,15 @@ name: Test Package
 
 on: push
 
+env:
+  tap_clockify_api_key: ${{ secrets.tap_clockify_api_key }}
+  tap_clockify_workspace: ${{ secrets.tap_clockify_workspace }}
+
 jobs:
-  build:
+  test_package:
     runs-on: ubuntu-latest
+    defaults:
+      working-directory: tap-clockify
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -16,7 +22,3 @@ jobs:
         run: poetry install
       - name: Test Package
         run: poetry run pytest
-        env:
-          tap_clockify_api_key: ${{ secrets.tap_clockify_api_key }}
-          tap_clockify_workspace: ${{ secrets.tap_clockify_workspace }}
-
