--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "Apache 2.0"
 python = "<3.9,>=3.6.1"
 requests = "^2.25.1"
 singer-sdk = "^0.3.3"
+setuptools = "^57.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.2"
