--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -14,9 +14,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Install Poetry into Environment
-        uses: abatilo/actions-poetry@v2.1.2
       - name: Install Package
-        run: poetry install --extras=setuptools
+        run: pip install .
       - name: Test Package
-        run: poetry run pytest
+        run: pytest
