--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           python-version: 3.8
       - name: Install Package
-        run: pip install .
+        run: pip install . pytest
       - name: Test Package
         run: pytest
