--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -12,10 +12,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Python Poetry Action
-        uses: abatilo/actions-poetry@v2.1.0
-      - name: Publish Package
-        run: poetry publish
+      - name: Build and publish to pypi
+        uses: JRubics/poetry-publish@v1.8
         with:
           pypi_token: ${{ secrets.pypi_api_token }}
 
