--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -11,10 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Install Package
-        run: pip install . pytest
+
+      # Use recommended install script: https://python-poetry.org/docs/
+      - name: Install Poetry
+        run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+
+      - name: Install Dependencies
+        run: poetry install
+
       - name: Test Package
-        run: pytest
+        run: poetry run pytest
