--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -18,10 +18,10 @@ jobs:
 
       # Use recommended install script: https://python-poetry.org/docs/
       - name: Install Poetry
-        run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+        run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
 
       - name: Install Dependencies
-        run: poetry install
+        run: $HOME/.local/bin/poetry install
 
       - name: Test Package
-        run: poetry run pytest
+        run: $HOME/.local/bin/poetry run pytest
