--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -17,11 +17,14 @@ jobs:
           python-version: 3.8
 
       # Use recommended install script: https://python-poetry.org/docs/
-      - name: Install Poetry
-        run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+      # - name: Install Poetry
+      #   run: |
+      #     curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
 
-      - name: Install Dependencies
-        run: $HOME/.local/bin/poetry install
+      - name: Install Poetry via pip
+        run: pip install poetry==1.1.5
 
       - name: Test Package
-        run: $HOME/.local/bin/poetry run pytest
+        run: |
+          poetry install
+          poetry run pytest
