--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -20,6 +20,7 @@ jobs:
       # - name: Install Poetry
       #   run: |
       #     curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+      #     export PATH=$PATH:$HOME/.local/bin
 
       - name: Install Poetry via pip
         run: pip install poetry==1.1.5
