--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["Stephen Bailey"]
 license = "Apache 2.0"
 
 [tool.poetry.dependencies]
-python = "<3.9,>=3.6.1"
+python = "<3.9,>=3.6.2"
 requests = "^2.25.1"
 singer-sdk = "^0.3.3"
+black = "^21.7-beta.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.2"
