--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -23,9 +23,10 @@ jobs:
       #     export PATH=$PATH:$HOME/.local/bin
 
       - name: Install Poetry via pip
-        run: pip install poetry==1.1.5
+        run: |
+          pip install poetry==1.1.5
+          poetry install
 
       - name: Test Package
         run: |
-          poetry install
           poetry run pytest
