--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -24,7 +24,8 @@ jobs:
 
       - name: Install Poetry via pip
         run: |
-          pip install poetry==1.1.5
+          pip install poetry
+          poetry self update --preview
           poetry install
 
       - name: Test Package
