--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -17,16 +17,16 @@ jobs:
           python-version: 3.8
 
       # Use recommended install script: https://python-poetry.org/docs/
-      # - name: Install Poetry
-      #   run: |
-      #     curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
-      #     export PATH=$PATH:$HOME/.local/bin
-
-      - name: Install Poetry via pip
+      - name: Install Poetry
         run: |
-          pip install poetry
+          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+          export PATH=$PATH:$HOME/.local/bin
           poetry self update --preview
-          poetry install
+
+      # - name: Install Poetry via pip
+      #   run: |
+      #     pip install poetry
+      #     poetry install
 
       - name: Test Package
         run: |
