--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -14,6 +14,17 @@ jobs:
           python-version: 3.8
       - name: Build and publish to pypi
         uses: JRubics/poetry-publish@v1.8
-        with:
-          pypi_token: ${{ secrets.pypi_api_token }}
 
+      - name: Install Poetry
+        run: |
+          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+          export PATH=$PATH:$HOME/.local/bin
+          poetry self update --preview
+
+      - name: Build and Publish Package
+        run: |
+          poetry build
+          poetry publish -u ${USERNAME} - p ${PASSWORD}
+        env:
+          USERNAME: "__token__"
+          PASSWORD: ${{ secrets.pypi_api_token }}
