--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -11,10 +11,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
+
+      # Use recommended install script: https://python-poetry.org/docs/
+      - name: Install Poetry
+        run: |
+          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+          export PATH=$PATH:$HOME/.local/bin
+          poetry self update --preview
+
       - name: Install Package
-        run: pip install . pytest
+        run: poetry install
+
       - name: Test Package
-        run: pytest
+        run: |
+          poetry run pytest
