--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -12,9 +12,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Build and publish to pypi
-        uses: JRubics/poetry-publish@v1.8
 
+      # Use recommended install script: https://python-poetry.org/docs/
       - name: Install Poetry
         run: |
           curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
