--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -1,8 +1,10 @@
 name: Publish Package to PyPI
 
-on:
-  release:
-    types: [created]
+on: push
+
+# on:
+#   release:
+#     types: [created]
 
 jobs:
   publish_package:
@@ -23,7 +25,7 @@ jobs:
       - name: Build and Publish Package
         run: |
           poetry build
-          poetry publish -u ${USERNAME} - p ${PASSWORD}
+          poetry publish -u ${USERNAME} -p ${PASSWORD}
         env:
           USERNAME: "__token__"
           PASSWORD: ${{ secrets.pypi_api_token }}
