--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tap-clockify"
-version = "1.0.6"
+version = "1.0.7"
 description = "Singer tap for Clockify, built with the Meltano SDK for Singer Taps."
 authors = ["Stephen Bailey <stkbailey@gmail.com>"]
 license = "MIT"
@@ -18,9 +18,9 @@ classifiers=[
 ]
 
 [tool.poetry.dependencies]
-python = "<3.9,>=3.6.2"
+python = "<3.10,>=3.6.2"
 requests = "^2.25.1"
-singer-sdk = "^0.3.3"
+singer-sdk = "^>0.3.14"
 black = "^21.7-beta.0"
 
 [tool.poetry.dev-dependencies]
